--- a/index.css
+++ b/index.css
@@ -1,8 +1,110 @@
-body {
-    margin: 0;
+@font-face {
+    font-family: "CursedTimer" ;
+    src: url("fonts/Scoreboard/CursedTimerUlil-Aznm.ttf");
 }
 
-.container {
-    display: flex;
-    justify-content: space-around;
+@font-face {
+    font-family: "Basketball";
+    src: url("fonts/Basketball/Basketball.otf");
 }
+
+:root{
+    --darkblue: #3A0CA3;
+    --flash-pink: #F72585;
+    --flash-blue: #4CC9F0;
+    --deep-purple: #7209B7;
+}
+
+
+body {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("images/arena.jpg");
+    background-size: cover;
+    font-family: "Basketball";
+    font-size: 100px;
+    text-shadow: 0px 0px 5px; white;
+}
+.scoreBoard{
+    display: flex;
+    flex-direction: column;
+}
+.containers {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    width: 800px;
+    height: 500px;
+    background: linear-gradient(var(--darkblue), var(--deep-purple), var(--flash-pink)) ;
+    color: var(--flash-blue);
+    border-radius: 20px;
+    box-shadow: 0px 0px 20px var(--flash-blue);
+    opacity: 0.9;
+}
+
+.containerHome, .containerGuest{
+    padding: 30px;
+    margin: 30px;
+    width: 300px;
+    height: 700px;
+    text-align: center;
+}
+
+#ScorePlayer1, #ScorePlayer2 {
+    margin: auto;
+    margin-top: -100px;
+    font-family: "CursedTimer" ;
+    font-size: 100px;
+    background-color: black;
+    width: 150px;
+    padding: 20px;
+    border: 5px solid var(--flash-pink);
+    margin-bottom: 20px;
+    color: var(--flash-pink);
+    border-radius: 10%;
+    text-shadow: 0px 0px 20px var(--flash-pink);
+}
+
+.buttons{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+    margin: 10px;
+    width: 300px;
+    height: 100px;
+    color: var(--flash-blue);
+    border-radius: 10%;
+    font-size: 70px;
+}
+button{
+    background-color: var(--deep-purple);
+    color: var(--flash-blue);
+    border: 2px solid var(--flash-blue);
+    border-radius: 10%;
+    font-size: 70px;
+
+}
+
+button:hover{
+    color: var(--flash-pink);
+    border: 2px solid var(--flash-pink);
+    cursor: grab;
+}
+
+.newgame{
+    border-radius: 20px;
+}
+
+.newgame:hover{
+    color: var(--flash-pink);
+    border: 2px solid var(--flash-pink);
+    cursor: grab;
+
+}
+    
+
+
